<resources>
    <string name="app_name">ป้ายจราจรน่ารู้</string>
    <string name="my_name">นายจิรวัฒน์ เหรียญทองชัย</string>
    <string name="app_major">หลักสูตรวิทยาการคอมพิวเตอร์</string>
    <string name="app_university">มหาวิทยาลัยสวนดุสิต</string>
    <string name="app_mobile">Mobile no.:0992156173</string>
    <string name="app_facebook">facebook:https://www.facebook.com/mez.rtc</string>
</resources>
