<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpapers_a_06"
    tools:context=".Aboutme">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="83dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="About Me"
        android:textColor="#000000"
        android:textSize="@dimen/h2"
        app:layout_constraintBottom_toTopOf="@+id/imvMyPic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <ImageView
        android:id="@+id/imvMyPic"
        android:layout_width="150dp"
        android:layout_height="145dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/popoooo11"
        tools:ignore="OnClick"
        tools:layout_editor_absoluteY="68dp"
        tools:onClick="playSound" />

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="252dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#99ffffff"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvMyPic">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:text="@string/my_name"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="274dp"
                tools:layout_margin="8dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="337dp"
                android:layout_height="wrap_content"
                android:text="@string/app_major"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="441dp"
                tools:layout_margin="8dp" />

            <TextView
                android:id="@+id/txvUniversity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickMap"
                android:text="@string/app_university"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="336dp"
                tools:layout_margin="8dp"
                tools:orientation="vertical" />

            <TextView
                android:id="@+id/txvMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickMobile"
                android:text="@string/app_mobile"
                tools:ignore="OnClick"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="367dp"
                tools:layout_margin="8dp" />

            <TextView
                android:id="@+id/txvFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickFacebook"
                android:text="@string/app_facebook"
                tools:ignore="OnClick"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="398dp"
                tools:layout_margin="8dp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="clickback"
        android:text="BACK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>